--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+    android:layout_height="wrap_content"
+    android:weightSum="1"
+    android:id="@+id/element_item"
+    android:background="#ffbee1ff">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -16,23 +20,29 @@
             android:id="@+id/textView"
             android:gravity="center_horizontal"
             android:layout_weight="1"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_margin="@dimen/Margin_5dp" />
 
     </LinearLayout>
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_weight="0.65"
-        android:layout_margin="@dimen/Margin_5dp" />
+        android:layout_margin="@dimen/Margin_5dp"
+        android:layout_gravity="center_horizontal|top"
+        android:maxWidth="250dp"
+        android:minHeight="250dp"
+        android:maxHeight="350dp"
+        android:minWidth="250dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textView2"
-        android:layout_weight="0.06"
-        android:gravity="center_horizontal" />
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal|top" />
 
 </LinearLayout>
