--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -25,7 +25,14 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/GridOutput"
+            android:text="@string/column_one"
+            android:id="@+id/radioButton"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/column_two"
             android:id="@+id/radioButton1"
             android:layout_gravity="center_horizontal|left"
             android:checked="false" />
@@ -33,7 +40,7 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ListOutput"
+            android:text="@string/column_three"
             android:id="@+id/radioButton2"
             android:layout_gravity="center_horizontal|left"
             android:checked="false" />
