remove DataBaseHeleper.java

--- a/app/src/main/res/layout/activity_cook_book.xml
+++ b/app/src/main/res/layout/activity_cook_book.xml
@@ -43,6 +43,7 @@
         android:numColumns="1"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
-        style="@style/Base.TextAppearance.AppCompat.SearchResult" />
+        style="@style/Base.TextAppearance.AppCompat.SearchResult"
+        android:fastScrollEnabled="true" />
 
 </LinearLayout>
