--- a/app/src/main/res/layout/activity_dilaog.xml
+++ b/app/src/main/res/layout/activity_dilaog.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:minWidth="300dp">
 
     <LinearLayout
         android:orientation="vertical"
@@ -30,7 +31,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/imageView2"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal|top"
+            android:contentDescription=""
+            android:layout_weight="1" />
 
         <LinearLayout
             android:orientation="vertical"
