--- a/app/src/main/res/layout/activity_dilaog.xml
+++ b/app/src/main/res/layout/activity_dilaog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:minWidth="300dp">
 
     <LinearLayout
@@ -47,7 +47,11 @@
                 android:layout_gravity="center_horizontal"
                 android:numStars="5"
                 android:stepSize="0.05"
-                android:longClickable="true" />
+                android:longClickable="false"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:isIndicator="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -59,7 +63,7 @@
 
         <TextView
             android:id="@+id/addr_edittext"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|top"
             android:lines="25"
