--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -2,47 +2,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="1"
     android:id="@+id/element_item"
-    android:background="#ffdbebff">
+    android:background="#ffe7f4ff">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:layout_gravity="center_horizontal|top">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/textView"
+            android:textSize="16sp"
+            android:textColor="#ff210095"
             android:gravity="center_horizontal"
-            android:layout_weight="1"
-            android:textSize="22sp"
+            android:layout_marginTop="@dimen/Margin_5dp"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView3"
+            android:layout_gravity="center_horizontal"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
             android:layout_margin="@dimen/Margin_5dp"
-            android:textColor="#ff210095" />
+            android:adjustViewBounds="true"
+            android:background="#ffff1f12" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView2"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:textColor="#ffff6429"
+            android:layout_margin="@dimen/Margin_5dp"
+            android:layout_gravity="center" />
 
     </LinearLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/imageView"
-        android:layout_margin="@dimen/Margin_5dp"
-        android:minHeight="250dp"
-        android:minWidth="250dp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView2"
-        android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal|top"
-        android:textSize="20sp"
-        android:textColor="#ffff6429" />
 
 </LinearLayout>
