outOfMemoryException fixed  adde files

--- a/app/src/main/res/layout/activity_cook_book.xml
+++ b/app/src/main/res/layout/activity_cook_book.xml
@@ -1,54 +1,62 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CookBOOK"
+    android:measureWithLargestChild="false"
     android:orientation="vertical"
-    android:id="@+id/root"
-    android:padding="@dimen/Margin_5dp">
+    android:padding="@dimen/Margin_5dp"
+    android:showDividers="beginning|middle|end"
+    tools:context=".CookBOOK">
 
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal"
         android:paddingBottom="@dimen/Margin_5dp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <EditText
+            android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
             android:layout_weight="1"
-            android:singleLine="true"
+            android:clickable="true"
             android:editable="true"
             android:enabled="true"
-            android:clickable="true"/>
+            android:singleLine="true" />
 
         <Button
+            android:id="@+id/buttonserch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Пошук"
-            android:id="@+id/buttonserch" />
+            android:text="Пошук" />
 
     </LinearLayout>
 
-    <GridView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <!--GridView
+        android:id="@+id/gridView"
+        style="@style/Base.TextAppearance.AppCompat.SearchResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/gridView"
-        android:gravity="center_horizontal|bottom|top"
-        android:numColumns="1"
-        android:layout_gravity="center_horizontal"
         android:layout_weight="1"
-        style="@style/Base.TextAppearance.AppCompat.SearchResult"
-        android:fastScrollEnabled="false"
-        android:horizontalSpacing="2dp"
-        android:verticalSpacing="2dp"
         android:background="#822c99ff"
-        android:stretchMode="columnWidth" />
+        android:fastScrollEnabled="true"
+        android:gravity="center_horizontal|bottom|top"
+        android:horizontalSpacing="2dp"
+        android:layoutMode="clipBounds"
+        android:numColumns="1"
+        android:outlineProvider="background"
+        android:verticalSpacing="2dp" />
+
+    <android.support.v7widget.RecyclerView /-->
 
 </LinearLayout>
